# Asl-project

./: Cargo.toml  README.md  canister_ids.json  dfx.json  package-lock.json  package.json  test_proposal.html
asl_flutter/: README.md  pubspec.yaml
asl_flutter/lib/: main.dart
asl_flutter/lib/core/: app_config.dart  exceptions.dart  icp_service.dart  network_service.dart  theme.dart
asl_flutter/lib/core/routing/: app_router.dart
asl_flutter/lib/models/: analytics.dart  artifact.dart  collaboration.dart  enums.dart  gamification.dart  models.dart  nft.dart  proposal.dart  system.dart
asl_flutter/lib/screens/artifacts/: artifact_detail_screen.dart  artifact_list_screen.dart
asl_flutter/lib/screens/auth/: login_screen.dart
asl_flutter/lib/services/: auth_service.dart  ic_config.dart  icp_service.dart  icp_service_extended.dart
asl_flutter/lib/widgets/: active_proposals_widget.dart  dashboard_card.dart  recent_artifacts_widget.dart
src/asl_backend/: Cargo.toml  asl_backend.did
src/asl_backend/src/: lib.rs
src/asl_backend/src/modules/: ai_analysis.rs  analytics.rs  artifacts.rs  audit.rs  auth.rs  collaboration.rs  community.rs  dao.rs  gamification.rs  mod.rs  nft.rs  storage.rs  types.rs  utils.rs  voting.rs
src/asl_backend/tests/: integration_tests.rs  module_tests.rs  unit_tests.rs
src/asl_frontend/: ASL_README.md  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.js  vitest.config.ts
src/asl_frontend/public/: .ic-assets.json5
src/asl_frontend/src/: App.jsx  App.tsx  index.css  main.tsx
(+69 files in other folders)
