[package]
name = "asl_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.17"
ic-cdk-timers = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ic-stable-structures = "0.6"
base64 = "0.21"

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
candid = { version = "0.10", features = ["test"] }
proptest = "1.0"
